...
                                                            <color key="value" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </userDefinedRuntimeAttribute>
                                                    </userDefinedRuntimeAttributes>
                                                </view>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="blm-kl-X2F" userLabel="Like Button">
                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button" label="like button"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="4EN-Kt-b3m"/>
                                                        <constraint firstAttribute="width" constant="44" id="UsK-77-KYX"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="favoriteNoActive"/>
...
                                <connections>
                                    <outlet property="delegate" destination="DhI-cq-dcG" id="rN7-3X-WAq"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wuv-g8-cV7" userLabel="Back Button">
                                <rect key="frame" x="0.0" y="0.0" width="42" height="42"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button" label="nav back button">
                                    <bool key="isElement" value="YES"/>
                                </accessibility>
                                <constraints>
                                    <constraint firstAttribute="height" constant="42" id="RxL-i3-95O"/>
                                    <constraint firstAttribute="width" constant="42" id="YUc-nv-Uft"/>
                                </constraints>
...
